@@ -2,7 +2,8 @@
 
 == DDT 0.4.2 (devel) ==
  * Fixed #33, bug with spaces in projects names: made all variables in DMD response file resolve to quote escaped values.
- * Fixed bug where all comments where considered documentation comments for doc hover
+ * Fixed bug where all D comments where considered documentation comments for documentation hover.
+ * Fixed limitation where problem hovers where not more priority than documentation hovers
 
 == DDT 0.4.1 (2011-03-04) ==
  * Fixed some parser bugs. (mostly relating to Template Instance references and source with invalid syntax)
